# ToolHunt

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dev-requirements.txt  docker-compose.yml  entrypoint.sh  patch_reqs.py  pr_description.md  pyproject.toml  requirements-docker.txt  requirements.txt  toolhunt_in_colab.py  update_database.py
.Jules/: palette.md
.github/workflows/: ci.yml  docker.yml
.jules/: bolt.md  palette.md  sentinel.md
app/: __init__.py  audit_logger.py  config.py  extensions.py  rate_limiter.py  routes.py
backend/: hybrid_search.py  main.py  reranker.py  tool_discovery.py
backend/database/: tools.db
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  conftest.py  test_app.py  test_conftest.py  test_hybrid_search.py  test_logging.py  test_main.py  test_reranker.py  test_search.py  test_security_pagination.py  test_tool_discovery.py  test_update_database.py
