[project]
name = "toolhunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "rank-bm25>=0.2.2",
    "sentence-transformers[onnx]>=5.1.0",
    "optimum-onnxruntime>=1.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend", "."]
filterwarnings = ["ignore::DeprecationWarning"]


[tool.ruff]
exclude = ["toolhunt_in_colab.py"]
